<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >

        <!--Nombre-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="4"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dignombre"
                android:textSize="20dp"
                android:inputType="text"
                android:layout_weight="2"
                android:id="@+id/eNombre"
                />
        </LinearLayout>

        <!--Correo-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="2"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digcorreo"
                android:textSize="20dp"
                android:inputType="text"
                android:layout_weight="1"
                android:id="@+id/eCorreo"
                />

        </LinearLayout>

        <!--Telefono-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="2"
                />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digtelefono"
                android:textSize="20dp"
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/eTelefono"
                />

        </LinearLayout>

        <!--Sexo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="2"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mas"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Fem"/>
            </RadioGroup>

        </LinearLayout>

        <!--Ciudades-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cities"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/ciudad_prompt"
                android:spinnerMode="dropdown"/>

            </LinearLayout>

        <!--Hobbies-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hob"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_id"
                android:text="@string/h1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_id1"
                android:text="@string/h2"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_id2"
                android:text="@string/h3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox_id3"
                android:text="@string/h4"/>

            </LinearLayout>

        <!--Fecha-->
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date">
            </DatePicker>

         <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:text="@string/ok"
                android:id="@+id/boton"
                />

        <!--Nombre-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="4"
                android:id="@+id/tNombre"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="2"
                android:id="@+id/Nombre"
                />
        </LinearLayout>

        <!--Correo-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="2"
                android:id="@+id/tCorreo"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/tMail"
                />

        </LinearLayout>

        <!--Telefono-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="2"
                android:id="@+id/tTelefono"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/tTele"
                />

        </LinearLayout>

        <!--Sexo-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:layout_weight="2"
                android:id="@+id/Sex"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/tSex"
                />
        </LinearLayout>

        <!--Ciudades-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:id="@+id/Cities"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/tCiud"
                />

        </LinearLayout>

        <!--Hobbies-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:id="@+id/Hobb"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/tHobb"
                />

        </LinearLayout>

        <!--Nacimiento-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textColor="@color/maroon"
                android:id="@+id/Naci"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/tNaci"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>

